ajout creation event

--- a/public/templates/static/footer.html
+++ b/public/templates/static/footer.html
@@ -6,7 +6,7 @@
                     <h3 translate>Utiliser EventMboa</h3>
                     <li><a href="" translate>EventMboa App</a></li>
                     <li><a href="" translate>Tarifs</a></li>
-                    <li><a href="" translate>Plan de salle</a></li>
+                    <!--<li><a href="" translate>Plan de salle</a></li>-->
                 </ul>
             </div>
             <div class="col-lg-3 col-sm-3 col-md-3">
@@ -55,12 +55,12 @@
             <div class="col-lg-9 col-sm-9 col-md-9 spec">
                 <ul class="nav navbar">
                     <li><a href="" translate>A propos</a></li>
-                    <li><a href="" translate>Blog</a></li>
+                    <!-- <li><a href="" translate>Blog</a></li>-->
                     <li><a href="" translate>Aide</a></li>
-                    <li><a href="" translate>Emploi</a></li>
+                    <!--<li><a href="" translate>Emploi</a></li>
                     <li><a href="" translate>Presse</a></li>
                     <li><a href="" translate>Sécurité</a></li>
-                    <li><a href="" translate>Développeurs</a></li>
+                    <li><a href="" translate>Développeurs</a></li>-->
                     <li><a href="" translate>Conditions d'utilisation</a></li>
                     <li><a href="" translate>Confidentialité</a></li>
                     <li><a href="" translate>Cookies</a></li>
