--- a/public/templates/event/form-events.html
+++ b/public/templates/event/form-events.html
@@ -332,6 +332,9 @@
                                 <th class="col-lg-2 col-sm-2 com-md-2">
                                     <ff translate>Qté disponible</ff>
                                     <span class="requis">*</span></th>
+                                <th class="col-lg-1 col-sm-1 com-md-1">
+                                    <ff translate>Max/Commande</ff>
+                                </th>
                                 <th class="col-lg-3 col-sm-3 com-md-3">
                                     <ff translate>Prix</ff>
                                 </th>
@@ -345,6 +348,8 @@
                                                    placeholder="{{'Billet à tarif préférentiel, RSVP...'|translate}}"
                                                    class="form-control"/></td>
                                         <td><input type="number" min="0" step="1" ng-model="b.quantite" placeholder="100" class="form-control"/></td>
+                                        <td><input type="number" min="0" step="1" ng-model="b.max_command"
+                                                   placeholder="5" class="form-control"/></td>
                                         <td ng-if="b.type=='Gratuit'">{{b.type}}</td>
                                         <td ng-if="b.type=='Payant'">
                                             <div class="input-group">
