Integration des remarques integration du favicon integration validate event_form

--- a/public/templates/aide/index-aide.html
+++ b/public/templates/aide/index-aide.html
@@ -49,8 +49,7 @@
                         <div id="collapse2" class="panel-collapse collapse in">
                             <ul class="nav">
                                 <li ng-class="{'active':choix=='email-participant'}"
-                                    ng-click="choix='email-participant'"><a ui-sref="email-participant" translate>E-mails
-                                    aux participants</a></li>
+                                    ng-click="choix='email-participant'"><a ui-sref="email-participant" translate>E-mails aux participants</a></li>
                             </ul>
                         </div>
                     </div>
