--- a/public/templates/home/content.html
+++ b/public/templates/home/content.html
@@ -8,8 +8,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi assumenda dicta expedita fuga iusto molestias, nam nisi nobis placeat quas, repellat voluptates. A alias aliquam, animi exercitationem iste quidem reprehenderit!</p>
                         <p>
                             <a href="" class="btn btn-primary btn-main" ng-if="!loguer" ui-sref="login" translate>Commencer</a>
-                            <a href="" class="btn btn-primary btn-main" ng-if="loguer" ui-sref="create" translate>Créer
-                                un événement</a>
+                            <a href="" class="btn btn-primary btn-main" ng-if="loguer" ui-sref="create" translate>Créer un événement</a>
                         </p>
                     </div>
                 </div>
