--- a/public/templates/user/billet-detail.html
+++ b/public/templates/user/billet-detail.html
@@ -77,7 +77,7 @@
                 </table>
             </div>
             <div class="clearfix"></div>
-            <a ui-sref="billet" translate><i class="fa fa-arrow-left"></i>
+            <a ui-sref="billet"><i class="fa fa-arrow-left"></i>
                 <ff translate>Retour aux commandes en cours</ff>
             </a>
         </div>
