--- a/public/templates/user/compte.html
+++ b/public/templates/user/compte.html
@@ -124,7 +124,7 @@
                         </div>
                         <div class="col-lg-4">
                             <div class="row">
-                                <div class="col-lg-6" style="padding-top: 9px;" translate>Annee</div>
+                                <div class="col-lg-6" style="padding-top: 9px;" translate>Année</div>
                                 <div class="col-lg-6">
                                     <input type="text" ng-model="compte.annee" class="form-control" placeholder="0000"/>
                                 </div>
