--- a/public/templates/user/index.html
+++ b/public/templates/user/index.html
@@ -25,8 +25,7 @@
                                                                                                        translate>Coordonnées</a>
                                 </li>
                                 <li ng-class="{'active':choix=='pass'}" ng-click="choix='pass'"><a ui-sref="pass"
-                                                                                                   translate>Mot de
-                                    passe</a></li>
+                                                                                                   translate>Mot de passe</a></li>
                                 <li ng-class="{'active':choix=='sociaux'}" ng-click="choix='sociaux'"><a
                                         ui-sref="sociaux" translate>Paramètres sociaux</a></li>
                                 <!--<li ng-class="{'active':choix=='om'}" ng-click="choix='om'"><a ui-sref="om" translate>Orange-->
@@ -50,8 +49,7 @@
                         <div id="collapse2" class="panel-collapse collapse in">
                             <ul class="nav">
                                 <li ng-class="{'active':choix=='recap'}" ng-click="choix='recap'"><a ui-sref="recap"
-                                                                                                     translate>Récapitulatif
-                                    des paiements</a></li>
+                                                                                                     translate>Récapitulatif des paiements</a></li>
                                 <!--<li ng-class="{'active':choix=='frais'}" ng-click="choix='frais'"><a ui-sref="frais">Frais et crédit</a></li>-->
                                 <li ng-class="{'active':choix=='facture'}" ng-click="choix='facture'"><a
                                         ui-sref="facture" translate>Factures</a></li>
