--- a/public/templates/auth/register.html
+++ b/public/templates/auth/register.html
@@ -19,10 +19,8 @@
         </div>
         <p class="small-text" style="margin-top: 15px;text-align: center">
             <ff translate>En m'inscrivant, j'accepte</ff>
-            <a href="" ui-sref="condition" translate>les conditions d'utilisation du service</a>, <a href=""
-                                                                                                     ui-sref="politique-donnees"
-                                                                                                     translate>la
-            politique de protection des données</a> ,
+            <a href="" ui-sref="condition" translate>les conditions d'utilisation du service</a>, <a href=""ui-sref="politique-donnees"
+                                                                                                     translate>la politique de protection des données</a> ,
             <ff translate> et</ff>
             <a href="" ui-sref="politique-cookies" translate>la politique relative aux cookies</a>
             <ff translate> d'EventMboa et j'accepte de recevoir des communications marketing de la part d'EventMboa.
