--- a/public/templates/event/detail-events.html
+++ b/public/templates/event/detail-events.html
@@ -122,10 +122,10 @@
         <!--Carte-->
     </div>
     <div class="clearfix"></div>
-    <div class="container">
-        <div id="map"></div>
-        <div id="map_canvas"></div>
-    </div>
+    <!--<div class="container">-->
+        <!--<div id="map"></div>-->
+        <!--<div id="map_canvas"></div>-->
+    <!--</div>-->
 </section>
 
 <div class="modal fade" id="inscriptionModal" tabindex="-1" role="dialog" aria-labelledby="Agent" aria-hidden="true">
