--- a/public/templates/user/contact.html
+++ b/public/templates/user/contact.html
@@ -50,11 +50,9 @@
 
                     <h4 class="bold" translate>Gérer tous vos contacts au même endroit</h4>
                     <p translate>
-                        Ajoutez et importez facilement des adresses électroniques à partir de votre boîte Gmail,
-                        Outlook, ou d'autres fichiers.Envoyez et suivez les invitations pour promouvoir votre événement.
+                        Ajoutez et importez facilement des adresses électroniques à partir de votre boîte Gmail, Outlook, ou d'autres fichiers.Envoyez et suivez les invitations pour promouvoir votre événement.
                     </p>
-                    <button class="btn btn-main" data-toggle="modal" href="/#contactModal" translate>Ajouter des
-                        contacts
+                    <button class="btn btn-main" data-toggle="modal" href="/#contactModal" translate>Ajouter des contacts
                     </button>
                 </div>
             </div>
@@ -129,8 +127,7 @@
             <div class="modal-body" style="background: #F8F8FA" ng-if="contact.action=='nouveau'">
                 <div class="row">
                     <div class="col-lg-12">
-                        <ff translate>Saisissez l'e-mail, le prénom, le nom de famille en les séparant par des virgules.
-                            Chaque nouveau contact doit être séparé par un point-virgule
+                        <ff translate>Saisissez l'e-mail, le prénom, le nom de famille en les séparant par des virgules. Chaque nouveau contact doit être séparé par un point-virgule
                         </ff>
 
                         <textarea ng-model="contact.contact" placeholder="johndoe@gmail.com,John,Doe"
