--- a/public/templates/event/form-events.html
+++ b/public/templates/event/form-events.html
@@ -88,9 +88,16 @@
                                 </div>
 
                             </div>
-                            <!--<div class="col-lg-4">-->
-                                <!--<div class="map"></div>-->
-                            <!--</div>-->
+                            <div class="col-lg-4 c" ng-if="adress.length>0">
+                                <h5 translate>Utiliser une adresse existante</h5>
+                                <div style="max-height: 150px;overflow-y: auto">
+                                    <ul class="nav">
+                                        <li ng-repeat="a in adress | orderBy : '-name':true" ng-click="choixAdress(a)">
+                                            <a>{{a.name}}</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
@@ -392,7 +399,7 @@
                             <div class="col-lg-6" ng-repeat="p in payment">
                                 <div class="checkbox">
                                     <label for="{{p.id}}">
-                                        <input type="checkbox" ng-model="e.paiement" id="{{p.id}}">
+                                        <input type="radio" ng-model="e.paiement" id="{{p.id}}">
                                         <ff>{{p.name}}</ff>
                                     </label>
                                 </div>
@@ -645,6 +652,12 @@
                             </div>
                         </div>
 
+                        <div class="form-group">
+                            <label translate>Point de distribution</label>
+                            <input type="text" placeholder="Point de distribution" ng-model="billet_detail.point.name" class="form-control"/>
+                            Ajouter les element de l'adress
+                            creation du ticket > creation de l'adress>creation du point de distribution
+                        </div>
                         <div class="form-group">
                             <label translate>Debut de la vente de billets</label>
                             <div class="row">
