--- a/public/templates/event/index.html
+++ b/public/templates/event/index.html
@@ -11,7 +11,7 @@
 
             <div class="col-sm-3">
 
-                <div class="map">
+                <div class="map hidden-xs hidden-sm">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d127357.54605143121!2d9.672423855301584!3d4.036071986641038!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sfr!4v1476193191387" width="100%" height="240" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
 
@@ -53,9 +53,9 @@ _________________________________________________________ -->
                     <!--</li>-->
                 </ul>
 
-                <h5 translate>Publicité</h5>
+                <h5 translate class="hidden-sm hidden-xs">Publicité</h5>
 
-                <div class="row" ng-repeat="p in pub |orderBy:'-update_at':true| limitTo:3">
+                <div class="row hidden-sm hidden-xs" ng-repeat="p in pub |orderBy:'-update_at':true| limitTo:3">
                     <div class="col-md-12 col2 pub">
                         <a href="{{p.url}}"
                            class="b-link-stroke b-animate-go  thickbox">
