--- a/public/templates/static/footer.html
+++ b/public/templates/static/footer.html
@@ -1,6 +1,6 @@
-<section class="footer" style="margin-top: 15px">
+<section class="footer">
     <div class="container">
-        <div class="row">
+        <div class="row text-center">
             <div class="col-lg-4 col-sm-4 col-md-4">
                 <ul class="nav">
                     <h3 translate>Utiliser EventMboa</h3>
@@ -35,16 +35,16 @@
         </div>
         <hr/>
         <div class="row">
-            <div class="col-lg-12 col-sm-12 col-md-12">
+            <div class="col-lg-12 col-sm-12 col-md-12 text-center">
                 <h3 translate>Pays</h3>
                 <ul class="nav navbar">
-                    <li ng-repeat="v in villes"><a >{{v}}</a></li>
+                    <li ng-repeat="v in pays"><a >{{v}}</a></li>
                 </ul>
             </div>
         </div>
         <hr/>
         <div class="row">
-            <div class="col-lg-9 col-sm-9 col-md-9 spec">
+            <div class="col-lg-12 col-sm-12 col-md-12 spec text-center">
                 <ul class="nav navbar">
                     <li><a href="" translate>A propos</a></li>
                     <li><a ui-sref="aide" translate>Aide</a></li>
@@ -53,19 +53,31 @@
                     <li><a href="" translate>Cookies</a></li>
                 </ul>
             </div>
-            <div class="col-lg-3 col-sm-3 col-md-3" ng-controller="AppCtrl">
-                <select name="" id="" class="form-control" ng-model="lang">
-                    <option ng-repeat="p in langue" value="{{p.value}}">{{p.name}}</option>
-                </select>
-            </div>
+            <!--<div class="col-lg-3 col-sm-3 col-md-3" ng-controller="AppCtrl">-->
+                <!--<select name="" ng-change="setLanguage(lang)" id="" class="form-control" ng-model="lang">-->
+                    <!--<option ng-repeat="p in langue" value="{{p.value}}">{{p.name}}</option>-->
+                <!--</select>-->
+            <!--</div>-->
         </div>
         <hr/>
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="text-center bold">
+        <div class="row hidden-sm hidden-xs">
+            <div class="col-lg-6">
+                <div class="bold">
                     &copy; EventMboa {{currentDate|date:'yyyy'}}
                 </div>
-                <div class="small text-center">
+            </div>
+            <div class="col-lg-6">
+                <div class="small text-right">
+                    <a href="http://www.wiicod.com" title="Designed by Wiicod">Wiicod</a>
+                </div>
+            </div>
+        </div>
+        <div class="row hidden-lg hidden-md">
+            <div class="col-lg-12 text-center">
+                <div class="bold">
+                    &copy; EventMboa {{currentDate|date:'yyyy'}}
+                </div>
+                <div class="small">
                     <a href="http://www.wiicod.com" title="Designed by Wiicod">Wiicod</a>
                 </div>
             </div>
